# graphic-design

./: .gitmodules  CMakeLists.txt  Texture.cpp  board.cpp  board.h  camera.cpp  camera.h  chessboard.cpp  chessboard.h  debug.cpp  debug.h  element_buffer.cpp  element_buffer.h  identity.h  index_buffer.cpp  index_buffer.h  main.cpp  material.h  mesh.cpp  mesh.h  model.cpp  model.h  paths.h  renderer.cpp  renderer.h  shader.cpp  shader.h  shader_program.cpp  shader_program.h  texture.cpp  texture.h  vertex.h  vertex_array.cpp  vertex_array.h  vertex_buffer.cpp  vertex_buffer.h  vertex_buffer_layout.h
artifacts/: renderer.h  texture.cpp  texture.h
lib/glad/: glad.c
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
lib/pgnlib/: Makefile  PGNCommentText.cpp  PGNCommentText.h  PGNException.cpp  PGNException.h  PGNGame.cpp  PGNGame.h  PGNGameCollection.cpp  PGNGameCollection.h  PGNGameResult.cpp  PGNGameResult.h  PGNMove.cpp  PGNMove.h  PGNMoveList.cpp  PGNMoveList.h  PGNParser.cpp  PGNParser.h  PGNPiece.cpp  PGNPiece.h  PGNPly.cpp  PGNPly.h  PGNPosition.cpp  PGNPosition.h  PGNSquare.cpp  PGNSquare.h  PGNTag.cpp  PGNTag.h  PGNTagList.cpp  PGNTagList.h  config.status  libtool
lib/pgnlib/.deps/: PGNCommentText.Plo  PGNException.Plo  PGNGame.Plo  PGNGameCollection.Plo  PGNGameResult.Plo  PGNMove.Plo  PGNMoveList.Plo  PGNParser.Plo  PGNPiece.Plo  PGNPly.Plo  PGNPosition.Plo  PGNSquare.Plo  PGNTag.Plo  PGNTagList.Plo
lib/pgnlib/example_1/: example_1  example_1.cpp
lib/pgnlib/example_2/: example_2.cpp
lib/pgnlib/example_3/: example_3.cpp
lib/pgnlib/example_4/: example_4.cpp
lib/pgnlib/example_5/: example_5.cpp
lib/pgnlib/example_6/: example_6.cpp
lib/pgnlib/example_7/: example_7.cpp
lib/stb/: stb_vorbis.c
res/objects/chess/: board.mtl  pawn.mtl
res/objects/chess/black/: pawn.mtl
res/objects/chess/white/: rook.mtl
res/objects/light/: lamp.mtl
res/shaders/: Basic.shader  fragment.glsl  material_fragment.glsl  material_vertex.glsl  texture_fragment.glsl  texture_vertex.glsl  vertex.glsl
